apps/plane/base/plane-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plane-ce-worker-wl
  labels:
    app.kubernetes.io/name: plane
    app.kubernetes.io/component: worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app.name: plane-ce-worker
  template:
    metadata:
      labels:
        app.kubernetes.io/name: plane
        app.kubernetes.io/component: worker
        app.name: plane-ce-worker
    spec:
      serviceAccountName: plane-ce-srv-account
      containers:
        - name: plane-ce-worker
          image: artifacts.plane.so/makeplane/plane-backend:v1.4.2
          imagePullPolicy: IfNotPresent
          stdin: true
          tty: true
          command:
            - ./bin/docker-entrypoint-worker.sh
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 1000m
              memory: 1536Mi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plane-ce-beat-worker-wl
  labels:
    app.kubernetes.io/name: plane
    app.kubernetes.io/component: beat-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app.name: plane-ce-beat-worker
  template:
    metadata:
      labels:
        app.kubernetes.io/name: plane
        app.kubernetes.io/component: beat-worker
        app.name: plane-ce-beat-worker
    spec:
      serviceAccountName: plane-ce-srv-account
      containers:
        - name: plane-ce-beat-worker
          image: artifacts.plane.so/makeplane/plane-backend:v1.4.2
          imagePullPolicy: IfNotPresent
          stdin: true
          tty: true
          command:
            - ./bin/docker-entrypoint-beat.sh
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 1024Mi
