apps/plane/base/database.yaml
apiVersion: v1
kind: Service
metadata:
  name: plane-ce-pgdb
  labels:
    app.kubernetes.io/name: plane
    app.kubernetes.io/component: database
    app.name: plane-ce-pgdb
spec:
  type: ClusterIP
  ports:
    - name: pg-5432
      port: 5432
      protocol: TCP
      targetPort: 5432
  selector:
    app.name: plane-ce-pgdb
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: plane-ce-pgdb-wl
  labels:
    app.kubernetes.io/name: plane
    app.kubernetes.io/component: database
spec:
  replicas: 1
  serviceName: plane-ce-pgdb
  selector:
    matchLabels:
      app.name: plane-ce-pgdb
  template:
    metadata:
      labels:
        app.kubernetes.io/name: plane
        app.kubernetes.io/component: database
        app.name: plane-ce-pgdb
    spec:
      serviceAccountName: plane-ce-srv-account
      containers:
        - name: plane-ce-pgdb
          image: postgres:15.7-alpine
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5432
              name: pg-5432
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 1000m
              memory: 1024Mi
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: pvc-plane-ce-pgdb-vol
  volumeClaimTemplates:
    - metadata:
        name: pvc-plane-ce-pgdb-vol
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: local-path
        resources:
          requests:
            storage: 5Gi
