apps/plane/base/minio.yaml
apiVersion: v1
kind: Service
metadata:
  name: plane-ce-minio
  labels:
    app.kubernetes.io/name: plane
    app.kubernetes.io/component: minio
    app.name: plane-ce-minio
spec:
  type: ClusterIP
  ports:
    - name: minio-api-9000
      port: 9000
      protocol: TCP
      targetPort: 9000
    - name: minio-console-9090
      port: 9090
      protocol: TCP
      targetPort: 9090
  selector:
    app.name: plane-ce-minio
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: plane-ce-minio-wl
  labels:
    app.kubernetes.io/name: plane
    app.kubernetes.io/component: minio
spec:
  replicas: 1
  serviceName: plane-ce-minio
  selector:
    matchLabels:
      app.name: plane-ce-minio
  template:
    metadata:
      labels:
        app.kubernetes.io/name: plane
        app.kubernetes.io/component: minio
        app.name: plane-ce-minio
    spec:
      serviceAccountName: plane-ce-srv-account
      containers:
        - name: plane-ce-minio
          image: docker.io/pgsty/minio:RELEASE.2026-08-04T00-00-00Z
          imagePullPolicy: IfNotPresent
          stdin: true
          tty: true
          args:
            - server
            - /data
            - --console-address
            - :9090
          ports:
            - containerPort: 9000
              name: minio-api
            - containerPort: 9090
              name: minio-console
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 1000m
              memory: 1024Mi
          volumeMounts:
            - mountPath: /data
              name: pvc-plane-ce-minio-vol
  volumeClaimTemplates:
    - metadata:
        name: pvc-plane-ce-minio-vol
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: local-path
        resources:
          requests:
            storage: 10Gi
