apps/plane/base/plane-admin.yaml
apiVersion: v1
kind: Service
metadata:
  name: plane-ce-admin
  labels:
    app.kubernetes.io/name: plane
    app.kubernetes.io/component: admin
    app.name: plane-ce-admin
spec:
  type: ClusterIP
  ports:
    - name: admin-3000
      port: 3000
      protocol: TCP
      targetPort: 3000
  selector:
    app.name: plane-ce-admin
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plane-ce-admin-wl
  labels:
    app.kubernetes.io/name: plane
    app.kubernetes.io/component: admin
spec:
  replicas: 1
  selector:
    matchLabels:
      app.name: plane-ce-admin
  template:
    metadata:
      labels:
        app.kubernetes.io/name: plane
        app.kubernetes.io/component: admin
        app.name: plane-ce-admin
    spec:
      serviceAccountName: plane-ce-srv-account
      containers:
        - name: plane-ce-admin
          image: artifacts.plane.so/makeplane/plane-admin:v1.4.2
          imagePullPolicy: IfNotPresent
          stdin: true
          tty: true
          ports:
            - containerPort: 3000
              name: admin-3000
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
