apps/plane/base/plane-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: plane-ce-api
  labels:
    app.kubernetes.io/name: plane
    app.kubernetes.io/component: backend
    app.name: plane-ce-api
spec:
  type: ClusterIP
  ports:
    - name: api-8000
      port: 8000
      protocol: TCP
      targetPort: 8000
  selector:
    app.name: plane-ce-api
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plane-ce-api-wl
  labels:
    app.kubernetes.io/name: plane
    app.kubernetes.io/component: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app.name: plane-ce-api
  template:
    metadata:
      labels:
        app.kubernetes.io/name: plane
        app.kubernetes.io/component: backend
        app.name: plane-ce-api
    spec:
      serviceAccountName: plane-ce-srv-account
      containers:
        - name: plane-ce-api
          image: artifacts.plane.so/makeplane/plane-backend:v1.4.2
          imagePullPolicy: IfNotPresent
          stdin: true
          tty: true
          command:
            - ./bin/docker-entrypoint-api.sh
          ports:
            - containerPort: 8000
              name: api-8000
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 1000m
              memory: 1024Mi
          readinessProbe:
            httpGet:
              path: /
              port: 8000
              scheme: HTTP
            initialDelaySeconds: 15
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 30
          livenessProbe:
            httpGet:
              path: /
              port: 8000
              scheme: HTTP
            initialDelaySeconds: 30
            periodSeconds: 20
            timeoutSeconds: 3
            failureThreshold: 5
