apps/plane/base/plane-live.yaml
apiVersion: v1
kind: Service
metadata:
  name: plane-ce-live
  labels:
    app.kubernetes.io/name: plane
    app.kubernetes.io/component: live
    app.name: plane-ce-live
spec:
  type: ClusterIP
  ports:
    - name: live-3000
      port: 3000
      protocol: TCP
      targetPort: 3000
  selector:
    app.name: plane-ce-live
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plane-ce-live-wl
  labels:
    app.kubernetes.io/name: plane
    app.kubernetes.io/component: live
spec:
  replicas: 1
  selector:
    matchLabels:
      app.name: plane-ce-live
  template:
    metadata:
      labels:
        app.kubernetes.io/name: plane
        app.kubernetes.io/component: live
        app.name: plane-ce-live
    spec:
      serviceAccountName: plane-ce-srv-account
      containers:
        - name: plane-ce-live
          image: artifacts.plane.so/makeplane/plane-live:v1.4.2
          imagePullPolicy: IfNotPresent
          stdin: true
          tty: true
          ports:
            - containerPort: 3000
              name: live-3000
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
