apps/plane/base/plane-space.yaml
apiVersion: v1
kind: Service
metadata:
  name: plane-ce-space
  labels:
    app.kubernetes.io/name: plane
    app.kubernetes.io/component: space
    app.name: plane-ce-space
spec:
  type: ClusterIP
  ports:
    - name: space-3000
      port: 3000
      protocol: TCP
      targetPort: 3000
  selector:
    app.name: plane-ce-space
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plane-ce-space-wl
  labels:
    app.kubernetes.io/name: plane
    app.kubernetes.io/component: space
spec:
  replicas: 1
  selector:
    matchLabels:
      app.name: plane-ce-space
  template:
    metadata:
      labels:
        app.kubernetes.io/name: plane
        app.kubernetes.io/component: space
        app.name: plane-ce-space
    spec:
      serviceAccountName: plane-ce-srv-account
      containers:
        - name: plane-ce-space
          image: artifacts.plane.so/makeplane/plane-space:v1.4.2
          imagePullPolicy: IfNotPresent
          stdin: true
          tty: true
          ports:
            - containerPort: 3000
              name: space-3000
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
