apps/plane/base/plane-web.yaml
apiVersion: v1
kind: Service
metadata:
  name: plane-ce-web
  labels:
    app.kubernetes.io/name: plane
    app.kubernetes.io/component: frontend
    app.name: plane-ce-web
spec:
  type: ClusterIP
  ports:
    - name: web-3000
      port: 3000
      protocol: TCP
      targetPort: 3000
  selector:
    app.name: plane-ce-web
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plane-ce-web-wl
  labels:
    app.kubernetes.io/name: plane
    app.kubernetes.io/component: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app.name: plane-ce-web
  template:
    metadata:
      labels:
        app.kubernetes.io/name: plane
        app.kubernetes.io/component: frontend
        app.name: plane-ce-web
    spec:
      serviceAccountName: plane-ce-srv-account
      containers:
        - name: plane-ce-web
          image: artifacts.plane.so/makeplane/plane-frontend:v1.4.2
          imagePullPolicy: IfNotPresent
          stdin: true
          tty: true
          ports:
            - containerPort: 3000
              name: web-3000
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
