apps/plane/base/rabbitmq.yaml
apiVersion: v1
kind: Service
metadata:
  name: plane-ce-rabbitmq
  labels:
    app.kubernetes.io/name: plane
    app.kubernetes.io/component: rabbitmq
    app.name: plane-ce-rabbitmq
spec:
  type: ClusterIP
  ports:
    - name: rabbitmq-5672
      port: 5672
      protocol: TCP
      targetPort: 5672
    - name: rabbitmq-mgmt-15672
      port: 15672
      protocol: TCP
      targetPort: 15672
  selector:
    app.name: plane-ce-rabbitmq
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: plane-ce-rabbitmq-wl
  labels:
    app.kubernetes.io/name: plane
    app.kubernetes.io/component: rabbitmq
spec:
  replicas: 1
  serviceName: plane-ce-rabbitmq
  selector:
    matchLabels:
      app.name: plane-ce-rabbitmq
  template:
    metadata:
      labels:
        app.kubernetes.io/name: plane
        app.kubernetes.io/component: rabbitmq
        app.name: plane-ce-rabbitmq
    spec:
      serviceAccountName: plane-ce-srv-account
      containers:
        - name: plane-ce-rabbitmq
          image: rabbitmq:3.13.6-management-alpine
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5672
              name: amqp
            - containerPort: 15672
              name: management
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
          volumeMounts:
            - mountPath: /var/lib/rabbitmq
              name: pvc-plane-ce-rabbitmq-vol
  volumeClaimTemplates:
    - metadata:
        name: pvc-plane-ce-rabbitmq-vol
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: local-path
        resources:
          requests:
            storage: 1Gi
