apps/plane/base/redis.yaml
apiVersion: v1
kind: Service
metadata:
  name: plane-ce-redis
  labels:
    app.kubernetes.io/name: plane
    app.kubernetes.io/component: redis
    app.name: plane-ce-redis
spec:
  type: ClusterIP
  ports:
    - name: redis-6379
      port: 6379
      protocol: TCP
      targetPort: 6379
  selector:
    app.name: plane-ce-redis
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: plane-ce-redis-wl
  labels:
    app.kubernetes.io/name: plane
    app.kubernetes.io/component: redis
spec:
  replicas: 1
  serviceName: plane-ce-redis
  selector:
    matchLabels:
      app.name: plane-ce-redis
  template:
    metadata:
      labels:
        app.kubernetes.io/name: plane
        app.kubernetes.io/component: redis
        app.name: plane-ce-redis
    spec:
      serviceAccountName: plane-ce-srv-account
      containers:
        - name: plane-ce-redis
          image: valkey/valkey:7.2.11-alpine
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 6379
              name: redis-6379
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
          volumeMounts:
            - mountPath: /data
              name: pvc-plane-ce-redis-vol
  volumeClaimTemplates:
    - metadata:
        name: pvc-plane-ce-redis-vol
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: local-path
        resources:
          requests:
            storage: 1Gi
