apps/plane/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plane
  labels:
    app.kubernetes.io/name: plane
    app.kubernetes.io/component: ingress
  annotations:
    cert-manager.io/cluster-issuer: local-ca-issuer
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
spec:
  ingressClassName: traefik
  rules:
    - host: plane.example.com
      http:
        paths:
          - path: /spaces
            pathType: Prefix
            backend:
              service:
                name: plane-ce-space
                port:
                  number: 3000
          - path: /god-mode
            pathType: Prefix
            backend:
              service:
                name: plane-ce-admin
                port:
                  number: 3000
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: plane-ce-api
                port:
                  number: 8000
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: plane-ce-api
                port:
                  number: 8000
          - path: /static/
            pathType: Prefix
            backend:
              service:
                name: plane-ce-api
                port:
                  number: 8000
          - path: /live/
            pathType: Prefix
            backend:
              service:
                name: plane-ce-live
                port:
                  number: 3000
          - path: /uploads
            pathType: Prefix
            backend:
              service:
                name: plane-ce-minio
                port:
                  number: 9000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: plane-ce-web
                port:
                  number: 3000
  tls:
    - hosts:
        - plane.example.com
      secretName: plane-tls
